<resources>
    <string name="app_name">Football Timer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_reset">Reset</string>
    <string name="action_export">Export</string>

    <string name="preferences" translatable="false">preferences_football_timer</string>
    <string name="preferences_half_length" translatable="false">preferences_half_length</string>

    <string name="reset_confirmation">Are you sure you want to reset?</string>
    <string name="reset_done">Reset completed.</string>

    <string name="export_confirmation">Save the score to file?</string>
    <string name="export_failed">Export failed.</string>
    <string name="export_failed_no_space">Export failed. Not enough memory.</string>
    <string name="export_failed_no_directory">Export failed. Could not create directory.</string>
    <string name="export_saved">Report saved in Documents.</string>

    <string-array name="settings_half_length">
        <item>45 minutes</item>
        <item>30 minutes</item>
        <item>20 minutes</item>
        <item>15 minutes</item>
        <item>10 minutes</item>
        <item>5 minutes</item>
        <item>Custom</item>
    </string-array>
    <string name="choose_half_length">Choose half length (minutes)</string>
    <string name="write_half_length">Half length</string>
    <string name="half_length_changed">Half length changed to %d min</string>

    <string name="change_of_half_length">Half length: %d min</string>

    <string name="start_timer">Start timer?</string>
    <string name="stop_timer">Stop timer?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>

    <string name="timer_stopped">Timer stopped.</string>
    <string name="timer_started">Timer started.</string>
    <string name="half_ended">Half ended.</string>
    <string name="match_ended">Match ended.</string>

    <string name="dialog_yellow_card_title">Who received yellow card?</string>
    <string name="dialog_red_card_title">Who received red card?</string>
    <string name="dialog_goal_title">Who scored?</string>
    <string name="dialog_other_title">Note</string>

    <string name="menu_event_list_edit">Edit</string>
    <string name="menu_event_list_delete">Delete</string>
    <string name="event_edit">Edit event message?</string>
    <string name="event_delete">Delete event?</string>

    <string name="about_text">Creator and developer:\n
<b>Lukas Paczos</b>\n\n
Icon projects:\n
<b>Michal Wojtas</b>, <b>Dorota Wojtas</b>\n\n
If you find any bugs or maybe you\'d like to share some feedback,\n
feel free to send me an e-mail: <b>lukas.paczos@gmail.com</b>\n
Thanks!</string>

    <string name="image_description">EventIcon</string>
    <string name="image_description_yellow_card">YellowCardIcon</string>
    <string name="image_description_red_card">RedCardIcon</string>
    <string name="image_description_goal">GoalIcon</string>
    <string name="image_description_other">OtherIcon</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3158356248600163/1396061131</string>

</resources>
