<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lukaspaczos.footballtimer.MainActivity">
    <item
        android:id="@+id/action_export"
        android:orderInCategory="10"
        android:title="@string/action_export"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_mail_outline_white_24px"/>
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="50"
        android:title="@string/action_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="150"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
